--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,1 +1,4 @@
-@forward 'attribution';
+@forward 'attribution' as attribution-*;
+@forward 'counter' as counter-*;
+@forward 'notification' as notification-*;
+@forward 'text-button' as text-button-*;
