--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,10 @@ body {
   display: grid;
   grid-template-rows: 1fr -webkit-max-content;
   grid-template-rows: 1fr max-content;
+  place-items: center;
   font: 500 16px Plus Jakarta Sans, sans-serif;
   color: hsl(219deg, 12%, 42%);
+  background-color: hsl(210deg, 60%, 98%);
 }
 
 a {
@@ -131,6 +133,8 @@ h1 {
 .notifications-page {
   padding: 1.2rem 1rem;
   font-size: 0.9rem;
+  background-color: hsl(0deg, 0%, 100%);
+  max-width: 730px;
 }
 .notifications-page__header {
   width: 100%;
@@ -154,4 +158,24 @@ h1 {
   display: flex;
   flex-direction: column;
   row-gap: 0.7rem;
+}
+@media (min-width: 1440px) {
+  .notifications-page {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    border-radius: 20px;
+    font-size: unset;
+    padding: 2rem;
+  }
+  .notifications-page h1 {
+    font-size: 24px;
+    margin-bottom: 0.5em;
+  }
+  .notifications-page img {
+    height: 2.8rem;
+  }
+  .notifications-page__content {
+    row-gap: 0.5rem;
+  }
 }
