--- a/scss/layout/_notifications-page.scss
+++ b/scss/layout/_notifications-page.scss
@@ -1,6 +1,11 @@
+@use '../configs/colors';
+@use '../utils/screen';
+
 .notifications-page {
     padding: 1.2rem 1rem;
     font-size: 0.9rem;
+    background-color: colors.$neutral-white;
+    max-width: 730px;
 
     &__header {
         width: 100%;
@@ -26,5 +31,25 @@
         display: flex;
         flex-direction: column;
         row-gap: 0.7rem;
+    }
+
+    @include screen.respond-to('desktop') {
+        height: max-content;
+        border-radius: 20px;
+        font-size: unset;
+        padding: 2rem;
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 0.5em;
+        }
+
+        img {
+            height: 2.8rem;
+        }
+
+        &__content {
+            row-gap: 0.5rem;
+        }
     }
 }
